--- a/JPAThymeleafProject/src/main/resources/templates/login.html
+++ b/JPAThymeleafProject/src/main/resources/templates/login.html
@@ -19,7 +19,7 @@
         <h2 class="form-signin-heading text-center mb-5">💚빅데이터반💚</h2>
         <p>
             <label for="username" class="sr-only">아이디</label>
-            <input type="text" id="username" name="userid" class="form-control" placeholder="아이디" autofocus required>
+            <input type="text" id="username" name="id" class="form-control" placeholder="아이디" autofocus required>
         </p>
         <p>
             <label for="password" class="sr-only">비밀번호</label>
